<resources>
    <string name="_1">1.</string>
    <string name="_15_photos_pack">15 photos / pack</string>
    <string name="_15_styles">15 styles</string>
    <string name="_2">2.</string>
    <string name="_30_photos_pack">30 photos / pack</string>
    <string name="_3_day_free_trial">3-day free trial</string>
    <string name="_5_style_3_pics_in_each_one">5 style / 3 pics in each one</string>
    <string name="_5_style_6_pics_in_each_one">5 style / 6 pics in each one</string>
    <string name="_80_off">80% off</string>
    <string name="_lifetime">Lifetime</string>
    <string name="_week">Week</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_camera">To continue, Aiphoto needs access to camera.</string>
    <string name="access_photo">To continue, Aiphoto needs access to your photos.</string>
    <string name="action_settings">Settings</string>
    <string name="admob_app_id">ca-app-pub-8805043795424125~1860368892</string>
    <string name="after">After</string>
    <string name="ai_art_generator">AI Art Generator</string>
    <string name="ai_avatar">AI Headshot</string>
    <string name="ai_avatar_intro">Create your personalized\nAI-generated headshot effortlessly</string>
    <string name="ai_deforum">Deforum</string>
    <string name="ai_enhancer">AI Enhancer</string>
    <string name="ai_face_animation">AI Face Animation</string>
    <string name="ai_filter">AI Filter</string>
    <string name="ai_headshot">AI Headshot</string>
    <string name="ai_hugging_cartoon">AI Hugging Cartoon</string>
    <string name="ai_is_drawing">AI is drawing</string>
    <string name="ai_is_enhancing">AI is enhancing</string>
    <string name="ai_is_processing">AI is processing</string>
    <string name="ai_photo_enhance">AI Photo Enhance</string>
    <string name="ai_photo_studio">AI Photo Studio</string>
    <string name="ai_photo_studio_your_personal_photography_expert">AI Photo Studio – Your Personal Photography Expert!</string>
    <string name="ai_photoshoot">AI Studio</string>
    <string name="ai_photoshop">AI Photoshoot</string>
    <string name="ai_profile">AI Profile</string>
    <string name="ai_remove_object">AI Remove Object</string>
    <string name="ai_video">AI Video</string>
    <string name="aiavatar_style_premium_unlock">Unlock All &amp; No Ads</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="al_exo_track_role_commentary">Commentary</string>
    <string name="al_exo_track_role_supplementary">Supplementary</string>
    <string name="al_exo_track_selection_auto">Auto</string>
    <string name="al_exo_track_selection_none">None</string>
    <string name="al_exo_track_selection_title_audio">Audio</string>
    <string name="al_exo_track_selection_title_text">Text</string>
    <string name="al_exo_track_selection_title_video">Video</string>
    <string name="al_exo_track_stereo">Stereo</string>
    <string name="al_exo_track_surround">Surround sound</string>
    <string name="al_exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="al_exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="al_exo_track_unknown">Unknown</string>
    <string name="alarm_notify_text">UniChat run service</string>
    <string name="album_name_all">All Media</string>
    <string name="alert_notifications_default_prio_text"> Secondary notifications are disabled. \n\nIt happens if you have disabled and enabled notifications again or changed settings manually. \n\nClick OK to jump to system settings and select the second highest priority for this notification (Make sound). \n\nIronically, you should set the sound to none in advanced settings.</string>
    <string name="alert_notifications_high_prio_text"> Priority of for the big popup with snooze and dismiss buttons is too low to unlock the screen! \n\nIt happens if you have disabled and enabled notifications again or changed settings manually. \n\nClick OK to jump to system settings and select the highest priority for this notification (Make sound and pop up on screen). \n\nIronically, you should set the sound to none in advanced settings.</string>
    <string name="alert_notifications_title">Oh no! Big problem!</string>
    <string name="alert_notifications_turned_off">All notifications are turned off, including the big popup with snooze and dismiss buttons! \n\nClick OK to jump to settings and enable the notifications!</string>
    <string name="alert_permission_post_notifications_text">To display a popup when the alarm rings, permission to show notifications is required.</string>
    <string name="alert_permission_post_notifications_title">Permission to show notifications</string>
    <string name="all_photos">All photos</string>
    <string name="all_style">All styles</string>
    <string name="allow">Allow</string>
    <string name="allow_access">Allow access</string>
    <string name="allow_access_to">Allow access to</string>
    <string name="allow_access_to_photos">Allow access to Photos</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="and">And</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">AI Photo Enhancer</string>
    <string name="app_not_installed">App is not installed</string>
    <string name="app_open_share_ad_unit_id">ca-app-pub-8805043795424125/3884352537</string>
    <string name="app_open_test">ca-app-pub-3940256099942544/3419835294</string>
    <string name="app_open_with_ad_unit_id">ca-app-pub-8805043795424125/2385252812</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="cancel_down_case">Cancel</string>
    <string name="check_internet">Please check your network or try again later!</string>
    <string name="choose_gender">Select gender</string>
    <string name="choose_gender_desc">Your choice will be saved for future use.</string>
    <string name="content_deny_permission">To continue, We needs your permission to access your Photos</string>
    <string name="female">Female</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="label_content_discard_result">This will discard all changes, and the cannot be undone.</string>
    <string name="label_content_sorry_an_error_occurred">We apologize, but it seems there was a connection error.</string>
    <string name="label_discard">Discard</string>
    <string name="label_no_ads">No Ads</string>
    <string name="label_ok">OK</string>
    <string name="label_sorry_an_error_occurred">Sorry, an error occurred!</string>
    <string name="label_try_again">Retry</string>
    <string name="label_unlock_enhancer_pro">Unlock Enhancer PRO</string>
    <string name="label_watch_an_ad">Watch an AD</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="save_image">Save image</string>
    <string name="this_an_issue">There is an issue</string>
    <string name="understood">Got it</string>
</resources>