<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetAllowGallery"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="64dp"
    android:layout_marginHorizontal="8dp"
    app:cardBackgroundColor="#202020"
    app:cardCornerRadius="16dp">
    <LinearLayout
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:id="@+id/viewDontPermission"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_wifi_err"/>
        <com.skylock.ai_cartoon.textview.TextViewApp
            android:textStyle="bold"
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/this_an_issue"
            style="@style/text_bottom_sheet_title"/>
        <com.skylock.ai_cartoon.textview.TextViewApp
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/check_internet"
            style="@style/text_bottom_sheet_desc"/>
        <com.skylock.ai_cartoon.textview.TextViewApp
            android:textStyle="bold"
            android:id="@+id/tvGoSetting"
            android:background="@drawable/bg_button_round_gradient_15"
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:text="@string/understood"
            style="@style/button_primary"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
