<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/main_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/img_camera"/>
    <View
        android:background="#35323d"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/ic_deny_permission"/>
    <com.skylock.ai_cartoon.textview.TextViewApp
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/allow_access_to_photos"
        app:fontWeight="700"/>
    <com.skylock.ai_cartoon.textview.TextViewApp
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/content_deny_permission"
        android:layout_marginHorizontal="40dp"
        app:fontWeight="400"/>
    <com.skylock.ai_cartoon.textview.TextViewApp
        android:textSize="16sp"
        android:textColor="#292929"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_allow"
        android:background="@drawable/bg_button_round_white_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/go_to_settings"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:fontWeight="600"/>
</LinearLayout>
