<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingTop="8dp"
    android:paddingBottom="16dp"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="64dp"
    android:layout_weight="1"
    android:paddingHorizontal="16dp">
    <androidx.cardview.widget.CardView
        android:layout_width="48dp"
        android:layout_height="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"/>
    <com.skylock.ai_cartoon.textview.TextViewApp
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_gender"
        style="@style/text_header_medium"/>
    <com.skylock.ai_cartoon.textview.TextViewApp
        android:textSize="12sp"
        android:textColor="#979797"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_gender_desc"
        style="@style/text_header_medium"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/btnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/bg_border_crop"
                android:padding="@dimen/_18sdp"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/ic_male"/>
            <com.skylock.ai_cartoon.textview.TextViewApp
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/male"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/btnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp">
            <ImageView
                android:background="@drawable/bg_border_crop"
                android:padding="@dimen/_18sdp"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/ic_female"/>
            <com.skylock.ai_cartoon.textview.TextViewApp
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/female"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/btnOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:background="@drawable/bg_border_crop"
                android:padding="@dimen/_18sdp"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/ic_gender_other"/>
            <com.skylock.ai_cartoon.textview.TextViewApp
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/other"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
