<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_dialog"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_background"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="12sp"
            android:textColor="#d1d1d1"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/label_content_discard_result"
            android:includeFontPadding="false"
            android:layout_marginHorizontal="25dp"
            app:fontWeight="400"/>
        <LinearLayout
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/white"
                android:id="@+id/discard"
                android:background="@drawable/bg_btn_round_16"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_result"
                android:text="@string/label_discard"
                android:includeFontPadding="false"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:fontWeight="700"
                style="@style/button_primary"/>
            <TextView
                android:textSize="16sp"
                android:id="@+id/cancel"
                android:background="@drawable/bg_button_gradient_15"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_result"
                android:text="@string/cancel_down_case"
                android:includeFontPadding="false"
                android:layout_weight="1"
                app:fontWeight="700"
                style="@style/button_primary"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
